Updated with mobile responsive header and hero section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/laptop-responsive.css">
+    <link rel="stylesheet" href="assets/css/mobile-responsive.css">
 </head>
 
 <body>
@@ -45,6 +45,13 @@
                     <div class="navbar_button">
                         <a href="#" class="btn">Contact Us</a>
                     </div>
+
+                    <div class="hamburger">
+                        <span></span>
+                        <span></span>
+                        <span class="line"></span>
+                    </div>
+
                 </div>
             </div>
         </nav>
@@ -60,9 +67,10 @@
                     <div class="hero_content">
                         <h1>Discover Your Dream Property with Estatein</h1>
                         <img src="assets/images/sub-container-hero.png" alt="container img">
-                        <p>Your journey to finding the perfect property begins here. Explore our listings to find the home
+                        <p>Your journey to finding the perfect property begins here. Explore our listings to find the
+                            home
                             that matches your dreams.</p>
-    
+
                         <div class="hero_content_btns">
                             <a href="#" class="btn_learn">Learn More</a>
                             <a href="#" class="btn_browse">Browse Properties</a>
@@ -89,27 +97,29 @@
                 </div>
             </div>
 
-            <div class="sub_hero">
-                <div class="sub_hero_boxes">
-                    <div class="sub_hero_box box">
-                        <img src="assets/images/icon-right-arrow.png" alt="right arrow" class="right_arrow">
-                        <img src="assets/images/icon-dream.png" alt="box image">
-                        <h3>Find Your Dream Home</h3>
-                    </div>
-                    <div class="sub_hero_box box">
-                        <img src="assets/images/icon-right-arrow.png" alt="right arrow" class="right_arrow">
-                        <img src="assets/images/icon-unlock.png" alt="box image">
-                        <h3>Unlock Property Value</h3>
-                    </div>
-                    <div class="sub_hero_box box">
-                        <img src="assets/images/icon-right-arrow.png" alt="right arrow" class="right_arrow">
-                        <img src="assets/images/icon-effortless.png" alt="box image">
-                        <h3>Effortless Property Management</h3>
-                    </div>
-                    <div class="sub_hero_box box">
-                        <img src="assets/images/icon-right-arrow.png" alt="right arrow" class="right_arrow">
-                        <img src="assets/images/icon-smart.png" alt="box image">
-                        <h3>Smart Investments, Informed Decisions</h3>
+            <div class="sub_hero_main">
+                <div class="sub_hero">
+                    <div class="sub_hero_boxes">
+                        <div class="sub_hero_box box">
+                            <img src="assets/images/icon-right-arrow.png" alt="right arrow" class="right_arrow">
+                            <img src="assets/images/icon-dream.png" alt="box image" class="box_icon">
+                            <h3>Find Your Dream Home</h3>
+                        </div>
+                        <div class="sub_hero_box box">
+                            <img src="assets/images/icon-right-arrow.png" alt="right arrow" class="right_arrow">
+                            <img src="assets/images/icon-unlock.png" alt="box image" class="box_icon">
+                            <h3>Unlock Property Value</h3>
+                        </div>
+                        <div class="sub_hero_box box">
+                            <img src="assets/images/icon-right-arrow.png" alt="right arrow" class="right_arrow">
+                            <img src="assets/images/icon-effortless.png" alt="box image" class="box_icon">
+                            <h3>Effortless Property Management</h3>
+                        </div>
+                        <div class="sub_hero_box box">
+                            <img src="assets/images/icon-right-arrow.png" alt="right arrow" class="right_arrow">
+                            <img src="assets/images/icon-smart.png" alt="box image" class="box_icon">
+                            <h3>Smart Investments, Informed Decisions</h3>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -117,6 +127,12 @@
     </section>
 
     <!-- hero section ends -->
+
+    <!-- Featured Section Starts -->
+
+    
+
+    <!-- Featured Section Ends -->
 
 </body>
 
